--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta name="google-site-verification" content="<meta name="google-site-verification" content="bOSht5PI69evG-GgPNvMTV-YdAXr1W2FStXWcLSkHmc" />" />
+    <meta name="google-site-verification" content="bOSht5PI69evG-GgPNvMTV-YdAXr1W2FStXWcLSkHmc" />
   </head>
   <body>
     Sitemap verification page.
