--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <meta name="google-site-verification" content="bOSht5PI69evG-GgPNvMTV-YdAXr1W2FStXWcLSkHmc" />
   </head>
   <body>
-    Sitemap verification page.
+    Verification page.
   </body>
 </html>
